--- a/src/app/components/listgroup/listgroup.component.html
+++ b/src/app/components/listgroup/listgroup.component.html
@@ -1,33 +1,33 @@
 <div class="list-group">
-    <p>Filtros</p>
+    <h1>Filtros</h1>
     <a href="#" class="list-group-item list-group-item-action border-light" >
       <div class="d-flex w-100 justify-content-between"> 
-        <h5 class="mb-1">Accesorios</h5>
+        <p class="mb-1">Accesorios</p>
       </div>
     </a>
     <a href="#" class="list-group-item list-group-item-action border-light" >
         <div class="d-flex w-100 justify-content-between"> 
-          <h5 class="mb-1">Audifonos</h5>
+          <p class="mb-1">Audifonos</p>
         </div>
     </a>
     <a href="#" class="list-group-item list-group-item-action border-light" >
         <div class="d-flex w-100 justify-content-between"> 
-          <h5 class="mb-1">Bajos</h5>
+          <p class="mb-1">Bajos</p>
         </div>
     </a>
     <a href="#" class="list-group-item list-group-item-action border-light" >
         <div class="d-flex w-100 justify-content-between"> 
-          <h5 class="mb-1">Guitarras</h5>
+          <p class="mb-1">Guitarras</p>
         </div>
     </a>
     <a href="#" class="list-group-item list-group-item-action border-light" >
         <div class="d-flex w-100 justify-content-between"> 
-          <h5 class="mb-1">Parlantes</h5>
+          <p class="mb-1">Parlantes</p>
         </div>
     </a>
     <div class="wrapper">
         <header>
-          <p>Precios</p>
+          <h1>Precios</h1>
         </header>
         <div class="price-input">
           <div class="field">
@@ -46,35 +46,35 @@
       <h1>
         <!--espaciado-->
       </h1>
-    <p>Marcas</p>
-    <a href="#" class="list-group-item list-group-item-action border-light">
-        <div class="d-flex w-100 justify-content-between">
-          <h5 class="mb-1">Ashdown</h5>
-        </div>
+    <h1>Marcas</h1>
+    <a class="list-group-item list-group-item-action border-light" [routerLink]="'ashdown'">
+      <div class="d-flex w-100 justify-content-between">
+        <p class="mb-1">Ashdown</p>
+      </div>
     </a>
     <a href="#" class="list-group-item list-group-item-action border-light">
       <div class="d-flex w-100 justify-content-between">
-        <h5 class="mb-1">Fender</h5>
+        <p class="mb-1">Fender</p>
       </div>
     </a>
     <a href="#" class="list-group-item list-group-item-action border-light">
         <div class="d-flex w-100 justify-content-between">
-          <h5 class="mb-1">J Marshall</h5>
+          <p class="mb-1">Marshall</p>
         </div>
     </a>
     <a href="#" class="list-group-item list-group-item-action border-light">
         <div class="d-flex w-100 justify-content-between">
-          <h5 class="mb-1">Gibson</h5>
+          <p class="mb-1">Gibson</p>
         </div>
     </a>
     <a href="#" class="list-group-item list-group-item-action border-light">
         <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1">ESP</h5>
+            <p class="mb-1">ESP</p>
         </div>
     </a>
     <a href="#" class="list-group-item list-group-item-action border-light">
         <div class="d-flex w-100 justify-content-between">
-            <h5 class="mb-1">Ibañez</h5>
+            <p class="mb-1">Ibañez</p>
         </div>
     </a>
 </div>
