--- a/src/app/components/productos/amplificadores/amplificadores.component.html
+++ b/src/app/components/productos/amplificadores/amplificadores.component.html
@@ -1,4 +1,4 @@
-<div class="row mx-auto text-align-center">
+<div class="row text-center">
     <div class="card mx-auto border-light" style="max-width: 15rem;">
         <img src="../../../../assets/img/amplifica/Amplificador Bajo Ashdown Original.png" class="card-img-center">
         <div class="card-body">
@@ -30,7 +30,7 @@
 <h1>
   <!--espaciado-->
 </h1>
-<div class="row mx-auto text-align-center">
+<div class="row text-center">
   <div class="card mx-auto border-light" style="max-width: 15rem;">
     <img src="../../../../assets/img/amplifica/Amplificador Bajo Ashdown Studio 8.png" class="card-img-center">
     <div class="card-body">
@@ -62,7 +62,7 @@
 <h1>
   <!--espaciado-->
 </h1>
-<div class="row mx-auto text-align-center">
+<div class="row text-center">
   <div class="card mx-auto border-light" style="max-width: 15rem;">
     <img src="../../../../assets/img/amplifica/Amplificador Guitarra Electrica Fender Champion.png" class="card-img-center">
     <div class="card-body">
@@ -94,7 +94,7 @@
 <h1>
   <!--espaciado-->
 </h1>
-<div class="row mx-auto text-align-center">
+<div class="row text-center">
   <div class="card mx-auto border-light" style="max-width: 15rem;">
     <img src="../../../../assets/img/amplifica/Cabezal Amplificador Bajo Ashdown RM800.png" class="card-img-center">
     <div class="card-body">
@@ -126,7 +126,7 @@
 <h1>
 <!--espaciado-->
 </h1>
-<div class="row mx-auto text-align-center">
+<div class="row text-center">
   <div class="card mx-auto border-light" style="max-width: 15rem;">
     <img src="../../../../assets/img/amplifica/Gabinete Amplificador Bajo Ashdown.png" class="card-img-center">
     <div class="card-body">
