--- a/src/app/components/productos/amplificadores/amplificadores.component.scss
+++ b/src/app/components/productos/amplificadores/amplificadores.component.scss
@@ -1,8 +1,4 @@
-.card{
-    top: 90px;
-    left: 95px;
-}
-.card-img-center{
-    width: 160px;
-    height: 160px;
+.row{
+    margin-top: 50px;
+    margin-left: 250px;
 }
