--- a/src/app/components/productos/intcuerda/intcuerda.component.html
+++ b/src/app/components/productos/intcuerda/intcuerda.component.html
@@ -1,1 +1,158 @@
+<div class="row text-center">
+    <div class="card mx-auto border-light" style="max-width: 16rem;">
+        <img src="../../../../assets/img/instrucuerdas/GIBSON LPSSP00DGNH1.png" class="card-img-center">
+        <div class="card-body">
+          <h1 class="card-title">Gibson</h1>
+          <p class="card-text">Guitarra Electrica Les Paul Slash Goldtop Dark Back</p>
+          <h2>$4.187.000</h2>
+          <a href="#" class="btn btn-secondary">Agregar al carro</a>
+        </div>
+    </div>
+    <div class="card mx-auto border-light" style="max-width: 16rem;">
+      <img src="../../../../assets/img/instrucuerdas/GIBSON SGSR4VOFCNH1.png" class="card-img-center">
+      <div class="card-body">
+        <h1 class="card-title">Gibson</h1>
+        <p class="card-text">Guitarra Electrica Custom SG Standard Reissue</p>
+        <h2>$4.134.000</h2>
+        <a href="#" class="btn btn-secondary">Agregar al carro</a>
+      </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
+    <img src="../../../../assets/img/instrucuerdas/GIBSON SSHBHCNP8.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Gibson</h1>
+      <p class="card-text">Guitarra Acustica Hummingbird 2018 </p>
+      <h2>$3.890.000</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+</div>
+<h1>
+  <!--espaciado-->
+</h1>
+<div class="row text-center">
+  <div class="card mx-auto border-light" style="max-width: 14rem;">
+    <img src="../../../../assets/img/instrucuerdas/GIBSON ESD18WRNH1.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Gibson</h1>
+      <p class="card-text">Guitarra Electrica ES-335 Dot Wine Red</p>
+      <h2>$2.990.000</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
+    <img src="../../../../assets/img/instrucuerdas/GIBSON ESD18BZNH1.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Gibson</h1>
+      <p class="card-text">Guitarra Dot Blue Burst</p>
+      <h2>$2.990.000</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <img src="../../../../assets/img/instrucuerdas/ESP Eclipse.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">ESP</h1>
+      <p class="card-text">Guitarra Eléctrica ESP Eclipse EMG Black Satin</p>
+      <h2>$2.199.900</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+</div>
+<h1>
+  <!--espaciado-->
+</h1>
+<div class="row text-center">
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <img src="../../../../assets/img/instrucuerdas/ESP EII Horizon NTII.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">ESP</h1>
+      <p class="card-text">Guitarra eléctrica ESP EII Horizon NTII color Tiger Eye Amber Fade</p>
+      <h2>$2.449.900</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <img src="../../../../assets/img/instrucuerdas/Esp E-II HORIZON NT-II .png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">ESP</h1>
+      <p class="card-text">Guitarra eléctrica Esp E-II HORIZON NT-II - color see thru black sunburst</p>
+      <h2>$2.449.900</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
+    <img src="../../../../assets/img/instrucuerdas/ESP STREAM2.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">ESP</h1>
+      <p class="card-text">Bajo eléctrico 4 cuerdas ESP STREAM2 color tone burst</p>
+      <h2>$2.649.900</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+</div>
+<h1>
+  <!--espaciado-->
+</h1>
+<div class="row text-center">
+  <div class="card mx-auto border-light" style="max-width: 18rem;">
+    <img src="../../../../assets/img/instrucuerdas/ESP Eclipse series FM.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">ESP</h1>
+      <p class="card-text">Guitarra eléctrica ESP Eclipse series FM color See Thru Black</p>
+      <h2>$2.199.900</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 14rem;">
+    <img src="../../../../assets/img/instrucuerdas/Acustica AW8412CE WK Ibanez.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Ibañez</h1>
+      <p class="card-text">Guitarra 12 cuerdas Electro Acustica AW8412CE WK Ibanez</p>
+      <h2>$2.399.990</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <img src="../../../../assets/img/instrucuerdas/5 cuerdas SRMD205 SPN Ibanez.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Ibañez</h1>
+      <p class="card-text">Bajo Electrico 5 cuerdas SRMD205 SPN Ibanez</p>
+      <h2>$2.349.990</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+</div>
+<h1>
+<!--espaciado-->
+</h1>
+<div class="row text-center">
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
+    <img src="../../../../assets/img/instrucuerdas/Acustica AW54CE OPN Ibanez.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Ibañez</h1>
+      <p class="card-text">Guitarra Electro Acustica AW54CE OPN Ibanez</p>
+      <h2>$.1349.990</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
+    <img src="../../../../assets/img/instrucuerdas/GRX70QAL TBB Ibanez.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Ibañez</h1>
+      <p class="card-text">Guitarra Electrica GRX70QAL TBB Ibanez</p>
+      <h2>$2.239.990</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
+    <img src="../../../../assets/img/instrucuerdas/Acustica GA3ECE AM Ibanez.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Ibañez</h1>
+      <p class="card-text">Guitarra Electro Acustica GA3ECE AM Ibanez</p>
+      <h2>$1.169.990</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+</div>
 <app-listgroup></app-listgroup>
