--- a/src/app/components/productos/percusion/percusion.component.html
+++ b/src/app/components/productos/percusion/percusion.component.html
@@ -1,1 +1,158 @@
+<div class="row text-center">
+    <div class="card mx-auto border-light" style="max-width: 16rem;">
+        <img src="../../../../assets/img/percusion/kit bateria tama.png" class="card-img-center">
+        <div class="card-body">
+          <h1 class="card-title">Tama</h1>
+          <p class="card-text">Kit de batería Tama Starclassic Performer 6 piezas</p>
+          <h2>$2.048.772 </h2>
+          <a href="#" class="btn btn-secondary">Agregar al carro</a>
+        </div>
+    </div>
+    <div class="card mx-auto border-light" style="max-width: 16rem;">
+      <img src="../../../../assets/img/percusion/Batería Acústica Tama Imperialstar.png" class="card-img-center">
+      <div class="card-body">
+        <h1 class="card-title">Tama</h1>
+        <p class="card-text">Batería Acústica Tama Imperialstar IP52KH6NB</p>
+        <h2>4.488.793</h2>
+        <a href="#" class="btn btn-secondary">Agregar al carro</a>
+      </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
+    <img src="../../../../assets/img/percusion/tama ccm club lam.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Tama</h1>
+      <p class="card-text">Batería acústica Tama LJK48H4 CCM Club Jam color Charcoal Mist</p>
+      <h2>$3.435.954</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+</div>
+<h1>
+  <!--espaciado-->
+</h1>
+<div class="row text-center">
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
+    <img src="../../../../assets/img/percusion/Tama Starclassic ME32CZS.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Tama</h1>
+      <p class="card-text">Shell Pack 3 Piezas Tama Starclassic ME32CZS - Ocean Blue Fade Movingui</p>
+      <h2>$2.759.900</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
+    <img src="../../../../assets/img/percusion/Tama Imperialstar IE62H6W.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Tama</h1>
+      <p class="card-text">Set de Batería Tama Imperialstar IE62H6W - color Candy Apple Mist (CMP)</p>
+      <h2>$1.879.900</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
+    <img src="../../../../assets/img/percusion/Tama SLP LSP30CS TUQ.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Tama</h1>
+      <p class="card-text">Shell pack de 3 piezas Tama SLP LSP30CS TUQ</p>
+      <h2>$1.499.900</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+</div>
+<h1>
+  <!--espaciado-->
+</h1>
+<div class="row text-center">
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
+    <img src="../../../../assets/img/percusion/SBO Club Jam color Satin blonde.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Tama</h1>
+      <p class="card-text">Batería acústica LJL48H4 SBO Club Jam color Satin blonde</p>
+      <h2>$1.574.900</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <img src="../../../../assets/img/percusion/Tama Imperialstar IE52KH6W.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Tama</h1>
+      <p class="card-text">Batería Tama Imperialstar IE52KH6W de 5 piezas color Natural Zebrawood Wrap</p>
+      <h2>$1.789.900</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
+    <img src="../../../../assets/img/percusion/Roland VAD 506 V-Drums.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Roland</h1>
+      <p class="card-text">Batería Electrónica Roland VAD 506 V-Drums - Set</p>
+      <h2>$5.379.900</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+</div>
+<h1>
+  <!--espaciado-->
+</h1>
+<div class="row text-center">
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
+    <img src="../../../../assets/img/percusion/Kit bateria electrónica Roland TD-27KV .png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Roland</h1>
+      <p class="card-text">Kit bateria electrónica Roland TD-27KV + Stand MDS-STD2</p>
+      <h2>$4.079.900</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
+    <img src="../../../../assets/img/percusion/Roland VAD306.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Roland</h1>
+      <p class="card-text">Kit batería electrónica Roland VAD306 + soportes</p>
+      <h2>$3.329.900</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
+    <img src="../../../../assets/img/percusion/Roland TD-17KVX.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Roland</h1>
+      <p class="card-text">Batería electrónica Roland TD-17KVX - incluye Stand MDS-COM</p>
+      <h2>$2.199.900</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+</div>
+<h1>
+<!--espaciado-->
+</h1>
+<div class="row text-center">
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
+    <img src="../../../../assets/img/percusion/Roland TD-07KVX.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Roland</h1>
+      <p class="card-text">Batería electrónica Roland TD-07KVX4</p>
+      <h2>$2.039.900</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
+    <img src="../../../../assets/img/percusion/Roland TD-17KV-L.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Roland</h1>
+      <p class="card-text">Batería electrónica Roland TD-17KV-L</p>
+      <h2>$1.829.900</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 16rem;">
+    <img src="../../../../assets/img/percusion/bateria-electronica roland.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Roland</h1>
+      <p class="card-text">Batería electrónica Roland A71</p>
+      <h2>$1.889.900</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+</div>
 <app-listgroup></app-listgroup>
