--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,13 +6,13 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-        <img src="../../../assets/img/paginicio/billie.PNG" class="d-block w-100" height="415px" alt="primera imagen"> 
+        <img src="../../../assets/img/paginicio/guitablack2.png" class="d-block w-100" height="415px" alt="primera imagen"> 
     </div>
     <div class="carousel-item">
         <img src="../../../assets/img/paginicio/piano.png" class="d-block w-100" height="415px" alt="primera imagen">
     </div>
     <div class="carousel-item">
-        <img src="../../../assets/img/paginicio/guitablack2.png" class="d-block w-100" height="415px" alt="primera imagen">
+        <img src="../../../assets/img/paginicio/billie.PNG" class="d-block w-100" height="415px" alt="primera imagen">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -25,37 +25,50 @@
   </button>
 </div>
 <!-- Cards pro recomendados -->
+<h1 class="title-vendido">LO MAS VENDIDO</h1>
 <div class="row row-cols-1 row-cols-md-3 g-4 text-center">
-  <div class="card mx-auto border-light" style="max-width: 14rem;">
-      <img src="../../../assets/img/paginicio/guitaazul.jpeg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <p class="card-title">Guitarra azul</p>
-        <h5 class="card-text">Super amplficador wenardo para escuchar sus jordan 23 pa salir a roar $15.990</h5>
-        <a href="#" class="btn btn-secondary">Ver Producto</a>
-      </div>
-  </div>
-  <div class="card mx-auto border-light" style="max-width: 14rem;">
-    <img src="../../../assets/img/paginicio/guitaceleste.jpeg" class="card-img-top" alt="...">
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <img src="../../../../assets/img/amplifica/Amplificador Bajo Ashdown Original.png" class="card-img-center">
     <div class="card-body">
-      <p class="card-title">Amplificador</p>
-      <h5 class="card-text">Super amplficador wenardo para escuchar sus jordan 23 pa salir a roar $15.990</h5>
-      <a href="#" class="btn btn-secondary">Ver Producto</a>
+      <h1 class="card-title">Ashdown</h1>
+      <p class="card-text">Amplificador Bajo Ashdown Original</p>
+      <h2>$749.990</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
     </div>
-</div>
-<div class="card mx-auto border-light" style="max-width: 14rem;">
-  <img src="../../../assets/img/paginicio/guitarracafe.jpeg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <p class="card-title">Guitarra celeste</p>
-    <h5 class="card-text">Super amplficador wenardo para escuchar sus jordan 23 pa salir a roar $15.990</h5>
-    <a href="#" class="btn btn-secondary">Ver Producto</a>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <img src="../../../../assets/img/instrucuerdas/GIBSON LPSSP00DGNH1.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Gibson</h1>
+      <p class="card-text">Guitarra Electrica Les Paul Slash Goldtop Dark Back</p>
+      <h2>$4.187.000</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 14rem;">
+    <img src="../../../../assets/img/instrucuerdas/ESP EII Horizon NTII.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">ESP</h1>
+      <p class="card-text">Guitarra eléctrica ESP EII Horizon NTII color Tiger Eye Amber Fade</p>
+      <h2>$2.449.900</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <img src="../../../../assets/img/percusion/Roland VAD 506 V-Drums.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Roland</h1>
+      <p class="card-text">Batería Electrónica Roland VAD 506 V-Drums - Set</p>
+      <h2>$5.379.900</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
   </div>
 </div>
-<div class="card mx-auto border-light" style="max-width: 14rem;">
-  <img src="../../../assets/img/amplifica/amplificador.jpeg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <p class="card-title">Guitarra Cafe</p>
-    <h5 class="card-text">Super amplficador wenardo para escuchar sus jordan 23 pa salir a roar $15.990</h5>
-    <a href="#" class="btn btn-secondary">Ver Producto</a>
+
+<footer class="container-footer">
+  <div class="containersus">
+    <h1>SUSCRIBETE A NUESTRO NEWSLETTER</h1>
+    <input class="form-control me-2" type="search" placeholder="¿Que Buscas?" aria-label="search">
   </div>
-</div>
-<app-footer></app-footer>
+
+</footer>
