--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -64,11 +64,23 @@
     </div>
   </div>
 </div>
-
-<footer class="container-footer">
-  <div class="containersus">
-    <h1>SUSCRIBETE A NUESTRO NEWSLETTER</h1>
-    <input class="form-control me-2" type="search" placeholder="¿Que Buscas?" aria-label="search">
-  </div>
-
-</footer>
+<div class="container">
+  <footer class="py-5">
+    <div class="row">
+      <div class="col-md-5 offset-md-1 mb-3">
+        <form>
+          <h1>Subscribete a nuestro Newsletter</h1>
+          <div class="d-flex flex-column flex-sm-row w-100 gap-2">
+            <label for="newsletter1" class="visually-hidden">Ingresa tu Email</label>
+            <input id="newsletter1" type="text" class="form-control" placeholder="Ingresa tu Email">
+            <button class="btn btn-primary" type="button">Subscribe</button>
+          </div>
+          <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+            <p>© 2022 Company, Inc. All rights reserved.</p>
+            <ul class="list-unstyled d-flex"></ul>
+          </div>
+        </form>
+      </div>
+    </div>
+  </footer>
+</div>
