Footer y cambios generales

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -65,10 +65,46 @@
   </div>
 </div>
 
-<footer class="container-footer">
-  <div class="containersus">
-    <h1>SUSCRIBETE A NUESTRO NEWSLETTER</h1>
-    <input class="form-control me-2" type="search" placeholder="¿Que Buscas?" aria-label="search">
+<h1 class="title-vendido">Productos en Oferta</h1>
+<div class="row row-cols-1 row-cols-md-3 g-4 text-center">
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <img src="../../../../assets/img/amplifica/Amplificador Bajo Ashdown Original.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Ashdown</h1>
+      <p class="card-text">Amplificador Bajo Ashdown Original</p>
+      <h2>$749.990</h2>
+      <h2 class="h2">$500.990</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
   </div>
-
-</footer>
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <img src="../../../../assets/img/instrucuerdas/GIBSON LPSSP00DGNH1.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Gibson</h1>
+      <p class="card-text">Guitarra Electrica Les Paul Slash Goldtop Dark Back</p>
+      <h2>$4.187.000</h2>
+      <h2 class="h2">$3.800.990</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 14rem;">
+    <img src="../../../../assets/img/instrucuerdas/ESP EII Horizon NTII.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">ESP</h1>
+      <p class="card-text">Guitarra eléctrica ESP EII Horizon NTII color Tiger Eye Amber Fade</p>
+      <h2>$2.449.900</h2>
+      <h2 class="h2">$1.500.990</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+  <div class="card mx-auto border-light" style="max-width: 15rem;">
+    <img src="../../../../assets/img/percusion/Roland VAD 506 V-Drums.png" class="card-img-center">
+    <div class="card-body">
+      <h1 class="card-title">Roland</h1>
+      <p class="card-text">Batería Electrónica Roland VAD 506 V-Drums - Set</p>
+      <h2>$5.379.900</h2>
+      <h2 class="h2">$5.000.990</h2>
+      <a href="#" class="btn btn-secondary">Agregar al carro</a>
+    </div>
+  </div>
+</div>
