--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -6,7 +6,7 @@
 .title-vendido{
     margin-left: 25px;
     margin-top: 100px;
-    font: normal normal bold 20px Blacksword;
+    
 }
 .containersus{
     height: 65px;
@@ -19,4 +19,8 @@
     height: 25px;
     border-radius: 10px;
     margin-left: 1000px;
+}
+.h2{
+    font-size: 15px;
+    color: green;
 }
