--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-dark navbar-expand bg-black">
   <div class="container-fluid">
         <a class="navbar-brand" href="/"> 
-          MusicPRO
+          MusicPro
         </a>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mx-auto">
